feat: adds social links, removes contact section, adds incident faq

--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@
             <dl>
                 <dt>How to deal with incidents?</dt>
                 <dd>
-                    <p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu
-                        felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent
-                        fringilla quis tincidunt felis sagittis eget tempus euismod. Ante ipsum primis vestibulum.</p>
+                    <p>Wake crew up, let people deal with the incidents, put them back to pause.</p>
                 </dd>
             </dl>
 
@@ -81,41 +79,20 @@
         </div>
     </section>
 
-
-    <!-- Seven -->
-    <section class="wrapper style1 align-center">
-        <div class="inner medium">
-            <h2>Get in touch</h2>
-            <form method="post" action="#">
-                <div class="field half first">
-                    <label for="name">Name</label>
-                    <input type="text" name="name" id="name" value=""/>
-                </div>
-                <div class="field half">
-                    <label for="email">Email</label>
-                    <input type="email" name="email" id="email" value=""/>
-                </div>
-                <div class="field">
-                    <label for="message">Message</label>
-                    <textarea name="message" id="message" rows="6"></textarea>
-                </div>
-                <ul class="actions">
-                    <li><input type="submit" name="submit" id="submit" value="Send Message"/></li>
-                </ul>
-            </form>
-
-        </div>
-    </section>
-
     <!-- Footer -->
     <footer class="wrapper style1 align-center">
         <div class="inner">
             <ul class="icons">
-                <li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-                <li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-                <li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-                <li><a href="#" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-                <li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+                <li><a href="https://www.linkedin.com/in/reasn" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a>
+                </li>
+                <li><a href="https://www.xing.com/profile/Alex_Thiel" class="icon style2 fa-xing"><span class="label">LinkedIn</span></a>
+                </li>
+                <li><a href="https://twitter.com/alexanderthiel" class="icon style2 fa-twitter"><span class="label">Twitter</span></a>
+                </li>
+                <li><a href="https://www.instagram.com/reasn" class="icon style2 fa-instagram"><span class="label">Instagram</span></a>
+                </li>
+                <li><a href="mailto:me@alexthiel.de" class="icon style2 fa-envelope"><span
+                        class="label">Email</span></a></li>
             </ul>
             <p>&copy; 2017 Alexander Thiel. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
         </div>
