feat: adds more info, replaces blind text

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <section
             class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
         <div class="content">
-            <h1>How you might be able to quickly travel to the stars without defying the laws of physics</h1>
-            <blockquote>Digitalized, pausable humans crewing a self-repairing star ship travelling at a space shuttle's
+            <h1>How to quickly travel to the stars without defying the laws of physics</h1>
+            <blockquote>tl;dr Digitalized, pausable humans crewing a self-repairing star ship travelling at a space shuttle's
                 speed can visit thousands of stars within a lifetime.
             </blockquote>
             <h2>Ingredients</h2>
@@ -29,18 +29,17 @@
             <dl>
                 <dt>Human consciousness can be digitalized</dt>
                 <dd>
-                    <p>with robot avatars.</p>
+                    <p>with robot avatars. 🤖 Alternatively nanobots can preserve and repair the body forever and are able to instantly pause and unpause the mind.</p>
                 </dd>
                 <dt>Self-repairing star ships remain functional for thousands of years</dt>
                 <dd>
-                    <p>Self-repairing interstellar star ships that can replenish their resources using asteroids and
-                        solar energy</p>
+                    <p>The second ingredient is self-repairing interstellar star ships that can replenish their resources using asteroids and
+                        solar energy. They would have to carry sufficient energy to remain functional (although potentially in hibernation) while travelling between solar systems.</p>
                 </dd>
                 <dt>You live to see these star ships</dt>
                 <dd>
-                    <p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu
-                        felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent
-                        fringilla quis tincidunt felis sagittis eget tempus euismod. Ante ipsum primis vestibulum.</p>
+                    <p>Let's - for the beauty of the idea - assume that above requirements will become possible within only one or two centuries (It's not unimaginable with today's tech).
+                        The tricky part for humans living in 2020 is to stay alive to see that day. I have the hope that digitalizing consciousness becomes a possibility within the 21st century. As in the last century the fallback would be the freezer. 😜</p>
                 </dd>
 
             </dl>
@@ -48,10 +47,10 @@
             <p>With today's propulsion technology it would take the star ship thousands of years.
                 The star ship's speed doesn't really matter because</p>
             <ul>
-                <li>It's crew sleeps during travel between stars</li>
+                <li>It's crew sleeps/pauses during travel between stars</li>
                 <li>The ship is self-repairing</li>
             </ul>
-            <h2>s</h2>
+            <h2>Who does it feel?</h2>
             <ul>
                 <li>The star ship is populated by a crew of said digital people.</li>
                 <li>While en route the people are paused.</li>
@@ -59,7 +58,7 @@
                 <li>The crew can check out thousands of suns, planets, moons, nebula and go where no one has gone
                     before.
                 </li>
-                <li>Because things take so much time the crew will probably not be able to get in touch with earth.</li>
+                <li>The downside is that contact with earth is probably futile because earth develops (for the better or worse) while these star ships travel the galaxy.</li>
             </ul>
             <p>
             </p>
@@ -69,7 +68,7 @@
             <dl>
                 <dt>How to deal with incidents?</dt>
                 <dd>
-                    <p>Wake crew up, let people deal with the incidents, put them back to pause.</p>
+                    <p>Unpause the crew, let people deal with the incidents, put them back to pause. #skiptheboringpart.</p>
                 </dd>
             </dl>
 
