fix: fixes embarassing english bug

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
                 </dd>
 
             </dl>
-            <h2>Time is Relative ;)</h2>
+            <h2>Time is Relative</h2>
             <p>With today's propulsion technology it would take the star ship thousands of years.
                 The star ship's speed doesn't really matter because</p>
             <ul>
                 <li>It's crew sleeps/pauses during travel between stars</li>
                 <li>The ship is self-repairing</li>
             </ul>
-            <h2>Who does it feel?</h2>
+            <h2>How does it feel?</h2>
             <ul>
                 <li>The star ship is populated by a crew of said digital people.</li>
                 <li>While en route the people are paused.</li>
