feat: adds post about Aura :D

--- a/index.html
+++ b/index.html
@@ -20,6 +20,44 @@
     <section
             class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
         <div class="content">
+
+            <h1>Proposal for safer hyperlocal social networking</h1>
+            <p>2017-04-20</p><blockquote>tl;dr Aura. A new kind of social network that uses Bluetooth low energy to project a
+            user's digital self around him without using the internet. It works on Mars, on planes and requires no SIM card.
+            </blockquote>
+            <p>I waited for a long time to write this post. In summer of 2015 I tried out FireChat. It is a hyperlocal chat app that used Apple's multi-peer connectivity framework to
+                transmit chat messages without the need for internet and more importantly without the need for devices to pair.</p>
+            <p>Electrified with the idea of direct mesh communication without the need to pair, I developed the idea of allowing people to have a kind
+                of social profile projected to the outside world using this technology. Eventually this could even become a hyperlocal mesh network.
+            </p>
+            <p>Some immediate field tests with the iPad and iPhone of a friend yielded promising results.
+                Data could be transmitted without pairing devices across 95m when no obstacles were present.</p>
+            <p>Back then there was no reliable way of transmitting data cross-os and I found out that on iOS there was no
+                way of reliably keeping an app running in the background. Although that is something users are right to not want it is
+            absolutely necessary to make such an app usable. On android on the other hand there was no such thing as the multi-peer connectivity framework.</p>
+            <p>In addition I joined StyleLounge as a CTO in the summer of 2015. Taking over the team and contributing to a quick change of course towards
+            agility, modern technologies and a scalable architecture was one of the bigger challenges of my life. The idea went dormant.</p>
+            <p>In late spring of 2016 I became aware that thanks to BLE (Bluetooth low energy) the thing was about to become feasible on mainstream mobile devices.
+            I started peeking around technologies and a friend and former colleague, André König, helped me greatly to set up an app skeleton using the
+            newest front end technologies (react/redux, electron, webapp). I highly value the discussions and his input on the idea we had during that time.
+                Being a second priority after StyleLounge I put many weekends and evenings into it for the months to come.
+            </p>
+            <p>Today, Aura, as I came to call it is still not finished. This post is a way of increasing the pressure on myself to finally get shit done :)</p>
+            <p>Check out the (equally unfinished) page I set up at <a href="//auraapp.io">auraapp.io</a>.</p>
+            <p>My prototype can exchange data as intended, uses end-to-end encryption and allows editing of the profile</p>
+            <p>What's left - as the time of writing - some minor design finishes and getting the thing into the stores. #pressure #musthappen</p>
+
+        </div>
+        <div class="image">
+            <img src="images/banner.jpg" alt=""/>
+        </div>
+    </section>
+
+
+    <!-- One -->
+    <section
+            class="banner style1 orient-right content-align-left image-position-left fullscreen onload-image-fade-in onload-content-fade-left">
+        <div class="content">
             <h1>How to quickly travel to the stars without defying the laws of physics</h1>
             <blockquote>tl;dr Digitalized, pausable humans crewing a self-repairing star ship travelling at a space shuttle's
                 speed can visit thousands of stars within a lifetime.
