feat: adds image to space post

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             agility, modern technologies and a scalable architecture was one of the bigger challenges of my life. The idea went dormant.</p>
             <p>In late spring of 2016 I became aware that thanks to BLE (Bluetooth low energy) the thing was about to become feasible on mainstream mobile devices.
             I started peeking around technologies and a friend and former colleague, André König, helped me greatly to set up an app skeleton using the
-            newest front end technologies (react/redux, electron, webapp). I highly value the discussions and his input on the idea we had during that time.
+            newest front end technologies (react/redux, electron, web app). I highly value the discussions and his input on the idea we had during that time.
                 Being a second priority after StyleLounge I put many weekends and evenings into it for the months to come.
             </p>
             <p>Today, Aura, as I came to call it is still not finished. This post is a way of increasing the pressure on myself to finally get shit done :)</p>
@@ -112,7 +112,7 @@
 
         </div>
         <div class="image">
-            <img src="images/banner.jpg" alt=""/>
+            <img src="images/space-travel.jpg" alt=""/>
         </div>
     </section>
 
