feat: adds image to aura post

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         </div>
         <div class="image">
-            <img src="images/banner.jpg" alt=""/>
+            <img src="images/aura-first.jpg" alt=""/>
         </div>
     </section>
 
