feat: additional texts and sl logo

--- a/index.html
+++ b/index.html
@@ -15,38 +15,155 @@
 
 <!-- Wrapper -->
 <div id="wrapper" class="divided">
-
+    <section class="wrapper style1 align-center">
+        <div class="inner">
+            <h2>Hi, I'm Alexander Thiel.</h2>
+            <ul class="icons">
+                <li><a href="https://www.linkedin.com/in/reasn" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a>
+                </li>
+                <li><a href="https://www.xing.com/profile/Alex_Thiel" class="icon style2 fa-xing"><span class="label">LinkedIn</span></a>
+                </li>
+                <li><a href="https://twitter.com/alexanderthiel" class="icon style2 fa-twitter"><span class="label">Twitter</span></a>
+                </li>
+                <li><a href="https://soundcloud.com/noreasn/likes" class="icon style2 fa-soundcloud"><span class="label">SoundCloud</span></a>
+                </li>
+                <li><a href="https://github.com/reasn" class="icon style2 fa-github"><span class="label">GitHub</span></a>
+                </li>
+                <li><a href="mailto:me@alexthiel.de" class="icon style2 fa-envelope"><span
+                        class="label">Email</span></a></li>
+            </ul>
+            <p>Since I was a kid I love how code lets you create anything imaginable.<br> I'm committed, resilient, skilled, intelligent, in love with technology, ambitious and sociable.</p>
+            <p>I worked in many startups and my goal is to positively impact culture and technology of the people around me.
+            <br>Since 2015 I manage the great engineers at StyleLounge to build clean and scalable software.</p>
+            <div class="items style1 small onscroll-fade-in">
+                <section>
+                    <div class="inner">
+                        <div style="background-image: url(images/sl-logo.png); background-repeat: no-repeat; display: block; height: 20px; width: 20px; background-size: contain; margin: 6px auto 23px;">
+                            &nbsp;
+                        </div>
+                        <h3>CTO @ StyleLounge</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci
+                            amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+                    </div>
+                </section>
+                <section>
+                    <div class="inner">
+                        <span class="icon style3 major fa-commenting-o"></span>
+                        <h3>&ldquo;Patterns for reactive node.js Microservices&rdquo;<br>@ code.talks</h3>
+                        <p>
+                            <iframe width="200" height="150" src="https://www.youtube.com/embed/F_K5S1NAZOU"
+                                    frameborder="0" allowfullscreen></iframe>
+                        </p>
+                    </div>
+                </section>
+                <section>
+                    <div class="inner">
+                        <span class="icon style3 major fa-comment-o"></span>
+                        <h3>&ldquo;Patterns for reactive node.js Microservices&rdquo;<br>@ nodeHH</h3>
+                        <p>
+                            <iframe width="200" height="150" src="https://www.youtube.com/embed/F_K5S1NAZOU"
+                                    frameborder="0" allowfullscreen></iframe>
+                            <br><a>Slides</a></p>
+                    </div>
+                </section>
+                <section>
+                    <div class="inner">
+                        <span class="icon style3 major fa-comment"></span>
+                        <h3>&ldquo;Migrating to Reactive Microservices&rdquo;<br>@ code.talks commerce</h3>
+                        <p>The conference is targeted at <span style="white-space: nowrap">e-commerce</span>
+                            professionals both from engineering and other branches.</p>
+                    </div>
+                </section>
+                <section>
+                    <div class="inner">
+                        <span class="icon style3 major fa-comments-o"></span>
+                        <h3>&ldquo;Reactive node.js Microservices&rdquo;<br>@ jsunconf</h3>
+                        <p>Jsunconf is my favorite (un)conference so far, the level is high, conversations are
+                            meaningful and everybody's a potential speaker.</p>
+                    </div>
+                </section>
+                <section>
+                    <div class="inner">
+                        <span class="icon style3 major fa-comments"></span>
+                        <h3>&ldquo;Migrating to Reactive Microservices&rdquo;<br>@ Foodora</h3>
+                        <p>Matthias was so kind as to invite me to Berlin and a lot of very interesting discussions
+                            happened after the talk.
+                            <br><a>Slides</a></br>
+                    </div>
+                </section>
+                <section>
+                    <div class="inner">
+                        <span class="icon style3 major fa-comments-o"></span>
+                        <h3>&ldquo;Migrating to Reactive Microservices&rdquo;<br>@ Google Developer Group</h3>
+                        <p>
+                            <iframe width="200" height="150" src="https://www.youtube.com/embed/BRWbbf_Zaz0"
+                                    frameborder="0" allowfullscreen></iframe>
+                        </p>
+                    </div>
+                </section>
+                <section>
+                    <div class="inner">
+                        <span class="icon style3 major fa-comments"></span>
+                        <h3>&ldquo;Migrating to Reactive Microservices&rdquo;<br>@ EuroStaff Connect<br>&nbsp;x</h3>
+                        <p>
+                            <iframe width="200" height="150" src="https://www.youtube.com/embed/EartCIsw80U"
+                                    frameborder="0" allowfullscreen></iframe>
+                        </p>
+                    </div>
+                </section>
+            </div>
+        </div>
+    </section>
     <!-- One -->
     <section
             class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
         <div class="content">
 
             <h1>Proposal for safer hyperlocal social networking</h1>
-            <p>2017-04-20</p><blockquote>tl;dr Aura. A new kind of social network that uses Bluetooth low energy to project a
-            user's digital self around him without using the internet. It works on Mars, on planes and requires no SIM card.
+            <p>2017-04-20</p>
+            <blockquote>tl;dr Aura. A new kind of social network that uses Bluetooth low energy to project a
+                user's digital self around him without using the internet. It works on Mars, on planes and requires no
+                SIM card.
             </blockquote>
-            <p>I waited for a long time to write this post. In summer of 2015 I tried out FireChat. It is a hyperlocal chat app that used Apple's multi-peer connectivity framework to
-                transmit chat messages without the need for internet and more importantly without the need for devices to pair.</p>
-            <p>Electrified with the idea of direct mesh communication without the need to pair, I developed the idea of allowing people to have a kind
-                of social profile projected to the outside world using this technology. Eventually this could even become a hyperlocal mesh network.
+            <p>I waited for a long time to write this post. In summer of 2015 I tried out FireChat. It is a hyperlocal
+                chat app that used Apple's multi-peer connectivity framework to
+                transmit chat messages without the need for internet and more importantly without the need for devices
+                to pair.</p>
+            <p>Electrified with the idea of direct mesh communication without the need to pair, I developed the idea of
+                allowing people to have a kind
+                of social profile projected to the outside world using this technology. Eventually this could even
+                become a hyperlocal mesh network.
             </p>
             <p>Some immediate field tests with the iPad and iPhone of a friend yielded promising results.
                 Data could be transmitted without pairing devices across 95m when no obstacles were present.</p>
-            <p>Back then there was no reliable way of transmitting data cross-os and I found out that on iOS there was no
-                way of reliably keeping an app running in the background. Although that is something users are right to not want it is
-            absolutely necessary to make such an app usable. On android on the other hand there was no such thing as the multi-peer connectivity framework.</p>
-            <p>In addition I joined StyleLounge as a CTO in the summer of 2015. Taking over the team and contributing to a quick change of course towards
-            agility, modern technologies and a scalable architecture was one of the bigger challenges of my life. The idea went dormant.</p>
-            <p>In late spring of 2016 I became aware that thanks to BLE (Bluetooth low energy) the thing was about to become feasible on mainstream mobile devices.
-            I started peeking around technologies and a friend and former colleague, André König, helped me greatly to set up an app skeleton using the
-            newest front end technologies (react/redux, electron, web app). I highly value the discussions and his input on the idea we had during that time.
-                Being a second priority after StyleLounge I put many weekends and evenings into it for the months to come.
+            <p>Back then there was no reliable way of transmitting data cross-os and I found out that on iOS there was
+                no
+                way of reliably keeping an app running in the background. Although that is something users are right to
+                not want it is
+                absolutely necessary to make such an app usable. On android on the other hand there was no such thing as
+                the multi-peer connectivity framework.</p>
+            <p>In addition I joined StyleLounge as a CTO in the summer of 2015. Taking over the team and contributing to
+                a quick change of course towards
+                agility, modern technologies and a scalable architecture was one of the bigger challenges of my life.
+                The idea went dormant.</p>
+            <p>In late spring of 2016 I became aware that thanks to BLE (Bluetooth low energy) the thing was about to
+                become feasible on mainstream mobile devices.
+                I started peeking around technologies and a friend and former colleague, André König, helped me greatly
+                to set up an app skeleton using the
+                newest front end technologies (react/redux, electron, web app). I highly value the discussions and his
+                input on the idea we had during that time.
+                Being a second priority after StyleLounge I put many weekends and evenings into it for the months to
+                come.
             </p>
-            <p>Today, Aura, as I came to call it is still not finished. This post is a way of increasing the pressure on myself to finally get shit done :)</p>
+            <p>Today, Aura, as I came to call it is still not finished. This post is a way of increasing the pressure on
+                myself to finally get shit done :)</p>
             <p>Check out the (equally unfinished) page I set up at <a href="//auraapp.io">auraapp.io</a>.</p>
-            <p>My prototype can exchange data as intended, uses end-to-end encryption and allows editing of the profile</p>
-            <p>What's left - as the time of writing - some minor design finishes and getting the thing into the stores. #pressure #musthappen</p>
-
+            <p>My prototype can exchange data as intended, uses end-to-end encryption and allows editing of the
+                profile</p>
+            <p>What's left - as the time of writing - some minor design finishes and getting the thing into the stores.
+                #pressure #musthappen</p>
+            <p><a href="https://www.pexels.com/photo/nature-sunset-forest-sol-105218/" target="_blank">Picture: CC0,
+                Kaique Rocha</a></p>
         </div>
         <div class="image">
             <img src="images/aura-first.jpg" alt=""/>
@@ -59,7 +176,8 @@
             class="banner style1 orient-right content-align-left image-position-left fullscreen onload-image-fade-in onload-content-fade-left">
         <div class="content">
             <h1>How to quickly travel to the stars without defying the laws of physics</h1>
-            <blockquote>tl;dr Digitalized, pausable humans crewing a self-repairing star ship travelling at a space shuttle's
+            <blockquote>tl;dr Digitalized, pausable humans crewing a self-repairing star ship travelling at a space
+                shuttle's
                 speed can visit thousands of stars within a lifetime.
             </blockquote>
             <h2>Ingredients</h2>
@@ -67,17 +185,23 @@
             <dl>
                 <dt>Human consciousness can be digitalized</dt>
                 <dd>
-                    <p>with robot avatars. 🤖 Alternatively nanobots can preserve and repair the body forever and are able to instantly pause and unpause the mind.</p>
+                    <p>with robot avatars. 🤖 Alternatively nanobots can preserve and repair the body forever and are
+                        able to instantly pause and unpause the mind.</p>
                 </dd>
                 <dt>Self-repairing star ships remain functional for thousands of years</dt>
                 <dd>
-                    <p>The second ingredient is self-repairing interstellar star ships that can replenish their resources using asteroids and
-                        solar energy. They would have to carry sufficient energy to remain functional (although potentially in hibernation) while travelling between solar systems.</p>
+                    <p>The second ingredient is self-repairing interstellar star ships that can replenish their
+                        resources using asteroids and
+                        solar energy. They would have to carry sufficient energy to remain functional (although
+                        potentially in hibernation) while travelling between solar systems.</p>
                 </dd>
                 <dt>You live to see these star ships</dt>
                 <dd>
-                    <p>Let's - for the beauty of the idea - assume that above requirements will become possible within only one or two centuries (It's not unimaginable with today's tech).
-                        The tricky part for humans living in 2020 is to stay alive to see that day. I have the hope that digitalizing consciousness becomes a possibility within the 21st century. As in the last century the fallback would be the freezer. 😜</p>
+                    <p>Let's - for the beauty of the idea - assume that above requirements will become possible within
+                        only one or two centuries (It's not unimaginable with today's tech).
+                        The tricky part for humans living in 2020 is to stay alive to see that day. I have the hope that
+                        digitalizing consciousness becomes a possibility within the 21st century. As in the last century
+                        the fallback would be the freezer. 😜</p>
                 </dd>
 
             </dl>
@@ -96,7 +220,9 @@
                 <li>The crew can check out thousands of suns, planets, moons, nebula and go where no one has gone
                     before.
                 </li>
-                <li>The downside is that contact with earth is probably futile because earth develops (for the better or worse) while these star ships travel the galaxy.</li>
+                <li>The downside is that contact with earth is probably futile because earth develops (for the better or
+                    worse) while these star ships travel the galaxy.
+                </li>
             </ul>
             <p>
             </p>
@@ -106,10 +232,11 @@
             <dl>
                 <dt>How to deal with incidents?</dt>
                 <dd>
-                    <p>Unpause the crew, let people deal with the incidents, put them back to pause. #skiptheboringpart.</p>
+                    <p>Unpause the crew, let people deal with the incidents, put them back to pause.
+                        #skiptheboringpart.</p>
                 </dd>
             </dl>
-
+<p><a href="https://www.flickr.com/photos/24662369@N07/10592267924/" target="_blank">Picture: CC BY 2.0 NASA GSFC</a></p>
         </div>
         <div class="image">
             <img src="images/space-travel.jpg" alt=""/>
