feat: updates sl text

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
                             &nbsp;
                         </div>
                         <h3>CTO @ StyleLounge</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci
-                            amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+                        <p>🚀 I manage @StyleLounge's great engineers. 🚀 We build reactive microservices at scale.</p>
                     </div>
                 </section>
                 <section>
