--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
                         <span class="icon style3 major fa-commenting-o"></span>
                         <h3>&ldquo;Patterns for reactive node.js Microservices&rdquo;<br>@ code.talks</h3>
                         <p>
-                            <iframe width="200" height="150" src="https://www.youtube.com/embed/F_K5S1NAZOU"
-                                    frameborder="0" allowfullscreen></iframe>
+                            Awaiting publish by orga...
                         </p>
                     </div>
                 </section>
@@ -252,7 +251,9 @@
                 </li>
                 <li><a href="https://twitter.com/alexanderthiel" class="icon style2 fa-twitter"><span class="label">Twitter</span></a>
                 </li>
-                <li><a href="https://www.instagram.com/reasn" class="icon style2 fa-instagram"><span class="label">Instagram</span></a>
+                <li><a href="https://soundcloud.com/noreasn/likes" class="icon style2 fa-soundcloud"><span class="label">SoundCloud</span></a>
+                </li>
+                <li><a href="https://github.com/reasn" class="icon style2 fa-github"><span class="label">GitHub</span></a>
                 </li>
                 <li><a href="mailto:me@alexthiel.de" class="icon style2 fa-envelope"><span
                         class="label">Email</span></a></li>
