feat: adds slides

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                         <h3>&ldquo;Patterns for reactive node.js Microservices&rdquo;<br>@ code.talks</h3>
                         <p>
                             Awaiting publish by orga...
+                            <br><a href="https://docs.google.com/presentation/d/12EcxHl_fmXQAK-ird2Wmg7sVjx6_lnKuopb2xl1RfLw/edit?usp=sharing" target="_blank">Slides</a></p>
                         </p>
                     </div>
                 </section>
@@ -61,7 +62,7 @@
                         <p>
                             <iframe width="200" height="150" src="https://www.youtube.com/embed/F_K5S1NAZOU"
                                     frameborder="0" allowfullscreen></iframe>
-                            <br><a>Slides</a></p>
+                            <br><a href="https://docs.google.com/presentation/d/1XKF9c2X-zq1JoappshcvqJXIaZBsM16222I4IJ3O7RE/edit?usp=sharing" target="_blank">Slides</a></p>
                     </div>
                 </section>
                 <section>
@@ -69,7 +70,9 @@
                         <span class="icon style3 major fa-comment"></span>
                         <h3>&ldquo;Migrating to Reactive Microservices&rdquo;<br>@ code.talks commerce</h3>
                         <p>The conference is targeted at <span style="white-space: nowrap">e-commerce</span>
-                            professionals both from engineering and other branches.</p>
+                            professionals both from engineering and other branches.
+                            <br><a href="https://docs.google.com/presentation/d/1jG5ZkYFQJgV93Pi-XFPU_PpFc2s3czk_pF9fpVRt8pM/edit?usp=sharing" target="_blank">Slides</a></br>
+                        </p>
                     </div>
                 </section>
                 <section>
@@ -77,7 +80,9 @@
                         <span class="icon style3 major fa-comments-o"></span>
                         <h3>&ldquo;Reactive node.js Microservices&rdquo;<br>@ jsunconf</h3>
                         <p>Jsunconf is my favorite (un)conference so far, the level is high, conversations are
-                            meaningful and everybody's a potential speaker.</p>
+                            meaningful and everybody's a potential speaker.
+                            <br><a href="https://docs.google.com/presentation/d/1bUBwrrwuBM0SKTCnm9vl04tM4yX6s-V_J9Car-hS32Y/edit?usp=sharing" target="_blank">Slides</a></br>
+                        </p>
                     </div>
                 </section>
                 <section>
@@ -86,7 +91,8 @@
                         <h3>&ldquo;Migrating to Reactive Microservices&rdquo;<br>@ Foodora</h3>
                         <p>Matthias was so kind as to invite me to Berlin and a lot of very interesting discussions
                             happened after the talk.
-                            <br><a>Slides</a></br>
+                            <br><a href="https://docs.google.com/presentation/d/1au1n4o0p92ynEN3Am5ONZaDp1pxkL8brzCpscOOmskE/edit?usp=sharing" target="_blank">Slides</a></br>
+                        </p>
                     </div>
                 </section>
                 <section>
@@ -96,6 +102,7 @@
                         <p>
                             <iframe width="200" height="150" src="https://www.youtube.com/embed/BRWbbf_Zaz0"
                                     frameborder="0" allowfullscreen></iframe>
+                            <br><a href="https://docs.google.com/presentation/d/1jsPvK4RjvaiFvPvWktHsHr0Dawx1XegzcCqalnCe5-Q/edit?usp=sharing" target="_blank">Slides</a></br>
                         </p>
                     </div>
                 </section>
