feat: adds code.talks video

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
                             &nbsp;
                         </div>
                         <h3>CTO @ StyleLounge</h3>
-                        <p>🚀 I manage @StyleLounge's great engineers. 🚀 We build reactive microservices at scale.</p>
+                        <p>🚀 I manage @StyleLounge's great engineers. 🚀 We build reactive microservices at scale.
+                            <br><a href="https://www.stylelounge.io" target="_blank">Show me the best company in the world!</a></p>
+                        </p>
                     </div>
                 </section>
                 <section>
@@ -50,7 +52,8 @@
                         <span class="icon style3 major fa-commenting-o"></span>
                         <h3>&ldquo;Patterns for reactive node.js Microservices&rdquo;<br>@ code.talks</h3>
                         <p>
-                            Awaiting publish by orga...
+                            <iframe width="200" height="150" src="https://www.youtube.com/embed/GcMlxkFf6zk?iv_load_policy=3&modestbranding=1&rel=0&showinfo=0"
+                                    frameborder="0" allowfullscreen></iframe>
                             <br><a href="https://docs.google.com/presentation/d/12EcxHl_fmXQAK-ird2Wmg7sVjx6_lnKuopb2xl1RfLw/edit?usp=sharing" target="_blank">Slides</a></p>
                         </p>
                     </div>
@@ -60,7 +63,7 @@
                         <span class="icon style3 major fa-comment-o"></span>
                         <h3>&ldquo;Patterns for reactive node.js Microservices&rdquo;<br>@ nodeHH</h3>
                         <p>
-                            <iframe width="200" height="150" src="https://www.youtube.com/embed/F_K5S1NAZOU"
+                            <iframe width="200" height="150" src="https://www.youtube.com/embed/F_K5S1NAZOU?iv_load_policy=3&modestbranding=1&rel=0&showinfo=0"
                                     frameborder="0" allowfullscreen></iframe>
                             <br><a href="https://docs.google.com/presentation/d/1XKF9c2X-zq1JoappshcvqJXIaZBsM16222I4IJ3O7RE/edit?usp=sharing" target="_blank">Slides</a></p>
                     </div>
@@ -100,7 +103,7 @@
                         <span class="icon style3 major fa-comments-o"></span>
                         <h3>&ldquo;Migrating to Reactive Microservices&rdquo;<br>@ Google Developer Group</h3>
                         <p>
-                            <iframe width="200" height="150" src="https://www.youtube.com/embed/BRWbbf_Zaz0"
+                            <iframe width="200" height="150" src="https://www.youtube.com/embed/BRWbbf_Zaz0?iv_load_policy=3&modestbranding=1&rel=0&showinfo=0"
                                     frameborder="0" allowfullscreen></iframe>
                             <br><a href="https://docs.google.com/presentation/d/1jsPvK4RjvaiFvPvWktHsHr0Dawx1XegzcCqalnCe5-Q/edit?usp=sharing" target="_blank">Slides</a></br>
                         </p>
@@ -111,7 +114,7 @@
                         <span class="icon style3 major fa-comments"></span>
                         <h3>&ldquo;Migrating to Reactive Microservices&rdquo;<br>@ EuroStaff Connect<br>&nbsp;x</h3>
                         <p>
-                            <iframe width="200" height="150" src="https://www.youtube.com/embed/EartCIsw80U"
+                            <iframe width="200" height="150" src="https://www.youtube.com/embed/EartCIsw80U?iv_load_policy=3&modestbranding=1&rel=0&showinfo=0"
                                     frameborder="0" allowfullscreen></iframe>
                         </p>
                     </div>
