--- a/thesis/index.html
+++ b/thesis/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>Redirecting to my Bachelor's Thesis</title>
     <meta http-equiv="refresh"
-          content="0; url=https://drive.google.com/file/d/0By_VnNR4brAGNEZlX1YzR1JlVE0/view?usp=sharing"/>
+          content="0; url=https://drive.google.com/file/d/0By_VnNR4brAGNEZlX1YzR1JlVE0/view"/>
 </head>
 <body></body>
 </html>
